[gd_scene load_steps=34 format=2]

[ext_resource path="res://fuentes/Deep Jungle.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Imagenes/Fondo.png" type="Texture" id=2]
[ext_resource path="res://Imagenes/Play.png" type="Texture" id=3]
[ext_resource path="res://Scrips/Menu.gd" type="Script" id=4]
[ext_resource path="res://Imagenes/Play2.png" type="Texture" id=5]
[ext_resource path="res://fuentes/Peasone.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Imagenes/botoncito.png" type="Texture" id=7]
[ext_resource path="res://Imagenes/Squares.png" type="Texture" id=8]
[ext_resource path="res://Imagenes/Llenos.png" type="Texture" id=9]
[ext_resource path="res://Imagenes/botoncito2.png" type="Texture" id=10]
[ext_resource path="res://Imagenes/cuados_vacios.png" type="Texture" id=11]
[ext_resource path="res://Musica/sound-12.mp3" type="AudioStream" id=12]
[ext_resource path="res://Musica/sound-7.mp3" type="AudioStream" id=13]
[ext_resource path="res://Imagenes/Conf.png" type="Texture" id=14]
[ext_resource path="res://Musica/sound-14.mp3" type="AudioStream" id=15]
[ext_resource path="res://Musica/sound-2.mp3" type="AudioStream" id=16]
[ext_resource path="res://Musica/y2mate.com - Lama House  Eon.mp3" type="AudioStream" id=17]
[ext_resource path="res://Imagenes/regree2.png" type="Texture" id=22]
[ext_resource path="res://Imagenes/Salir.png" type="Texture" id=31]
[ext_resource path="res://Imagenes/regree.png" type="Texture" id=32]
[ext_resource path="res://Imagenes/cof.png" type="Texture" id=39]

[sub_resource type="Animation" id=1]
resource_name = "Anim_Fondo"
length = 120.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Squares:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 60.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2500, 540 ), Vector2( -579, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Llenos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 30, 60.1, 89.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2500, 540 ), Vector2( -573.885, 540 ), Vector2( 2500, 540 ), Vector2( -563.673, 540 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Llenos2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 45.1, 105 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2500, 540 ), Vector2( -573.885, 540 ), Vector2( 2500, 540 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Squares:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2500, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Llenos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2500, 540 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Llenos2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2500, 540 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 150
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
resource_name = "Animacion_lestras_otros"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Titulo:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 1e-05 ), Vector2( 0.25, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Titulo:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 305, 1050 ), Vector2( 300, 265 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Titulo:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Titulo:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 305, 1050 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Intro"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Intro"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.9 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.9 ) ]
}

[sub_resource type="DynamicFont" id=9]
size = 90
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 80
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=10]
resource_name = "Anim_Opciones"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Botones/Play:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Botones/Exit:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Botones/Options:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Texto/Titulo:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 265 ), Vector2( 305, 1050 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Texto/Titulo:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.25, 0.25 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Vibracion:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Teselado_Auto:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Apilado_Auto:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Salir:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sonido:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Botones/Play:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Botones/Exit:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Botones/Options:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Texto/Titulo:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 305, 1050 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Texto/Titulo:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.250008, 0.250008 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sonido:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Vibracion:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Teselado_Auto:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Apilado_Auto:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Salir:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Fondo2" type="Node2D" parent="."]

[node name="Fondo" type="Sprite" parent="Fondo2"]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="Squares" type="Sprite" parent="Fondo2"]
position = Vector2( 2500, 540 )
texture = ExtResource( 8 )

[node name="Llenos" type="Sprite" parent="Fondo2"]
position = Vector2( 2500, 540 )
texture = ExtResource( 9 )

[node name="Llenos2" type="Sprite" parent="Fondo2"]
position = Vector2( 2500, 540 )
texture = ExtResource( 11 )

[node name="Amin_Fondo" type="AnimationPlayer" parent="Fondo2"]
autoplay = "Anim_Fondo"
anims/Anim_Fondo = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Texto" type="Node2D" parent="."]

[node name="Titulo" type="Label" parent="Texto"]
margin_left = 305.0
margin_top = 1050.0
margin_right = 1607.0
margin_bottom = 1207.0
rect_rotation = -360.0
rect_scale = Vector2( 0.250008, 0.250008 )
rect_pivot_offset = Vector2( 650, 75 )
custom_fonts/font = SubResource( 3 )
text = "RECONSTRUYENDO EL ESPACIO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="Texto"]
anims/Animacion_lestras_otros = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Botones" type="Node2D" parent="."]

[node name="Play" type="TextureButton" parent="Botones"]
margin_left = 816.0
margin_top = 527.0
margin_right = 1092.0
margin_bottom = 804.0
rect_pivot_offset = Vector2( 140, 140 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Botones"]
margin_left = 891.0
margin_top = 918.0
margin_right = 1029.0
margin_bottom = 1056.0
rect_pivot_offset = Vector2( 70, 70 )
texture_normal = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="Botones"]
margin_left = 20.0
margin_top = 13.0
margin_right = 151.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 65, 65 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="AudioStreamPlayer" parent="Botones"]
stream = ExtResource( 12 )
volume_db = 10.0

[node name="Play2" type="AudioStreamPlayer" parent="Botones"]
stream = ExtResource( 13 )
volume_db = 10.0

[node name="Cortina_escena" type="ColorRect" parent="."]
visible = false
margin_left = -9.0
margin_top = -9.0
margin_right = 1934.0
margin_bottom = 1093.0
color = Color( 0, 0, 0, 0.9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="AnimationPlayer" parent="Cortina_escena"]
autoplay = "Intro"
anims/Intro = SubResource( 4 )

[node name="Salida" type="AnimationPlayer" parent="Cortina_escena"]
anims/Intro = SubResource( 6 )
anims/RESET = SubResource( 13 )

[node name="Opciones" type="Node2D" parent="."]

[node name="Sonido" type="Label" parent="Opciones"]
visible = false
margin_left = 399.0
margin_top = 166.0
margin_right = 673.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 9 )
text = "SONIDO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HScrollBar" type="HScrollBar" parent="Opciones/Sonido"]
visible = false
anchor_right = 5.372
anchor_bottom = 0.78
margin_left = 349.0
margin_top = 12.0
margin_right = -96.9281
margin_bottom = 0.0199966
step = 25.0
page = 10.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="min" type="Label" parent="Opciones/Sonido"]
visible = false
margin_left = 315.0
margin_top = 57.0
margin_right = 421.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 9 )
text = "min"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agradecimientos a musica" type="Label" parent="Opciones/Sonido"]
margin_left = 1.0
margin_top = 97.0
margin_right = 1477.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 9 )
text = "musica tomada de https://www.epidemicsound.com/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max" type="Label" parent="Opciones/Sonido"]
visible = false
margin_left = 1318.0
margin_top = 50.0
margin_right = 1446.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 9 )
text = "max"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vibracion" type="Label" parent="Opciones"]
visible = false
margin_left = 739.0
margin_top = 436.0
margin_right = 1111.0
margin_bottom = 527.0
custom_fonts/font = SubResource( 9 )
text = "MUSICA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="si_vibrar" type="TextureButton" parent="Opciones/Vibracion"]
margin_left = 598.0
margin_top = -38.0
margin_right = 736.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_vibrar" type="TextureButton" parent="Opciones/Vibracion"]
margin_left = 906.0
margin_top = -43.0
margin_right = 1044.0
margin_bottom = 95.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="si3" type="Label" parent="Opciones/Vibracion"]
margin_left = 637.0
margin_top = -5.0
margin_right = 697.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 12 )
text = "SI"

[node name="no3" type="Label" parent="Opciones/Vibracion"]
margin_left = 931.0
margin_top = -10.0
margin_right = 1026.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 12 )
text = "NO"

[node name="Teselado_Auto" type="Label" parent="Opciones"]
visible = false
margin_left = 440.0
margin_top = 689.0
margin_right = 1296.0
margin_bottom = 780.0
custom_fonts/font = SubResource( 9 )
text = "TESELADO AUTOMATICO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="si_Teselar" type="TextureButton" parent="Opciones/Teselado_Auto"]
margin_left = 924.0
margin_top = -38.0
margin_right = 1062.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_Teselar" type="TextureButton" parent="Opciones/Teselado_Auto"]
margin_left = 1232.0
margin_top = -43.0
margin_right = 1370.0
margin_bottom = 95.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="si" type="Label" parent="Opciones/Teselado_Auto"]
margin_left = 963.0
margin_top = -5.0
margin_right = 1023.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 12 )
text = "SI"

[node name="no" type="Label" parent="Opciones/Teselado_Auto"]
margin_left = 1257.0
margin_top = -10.0
margin_right = 1352.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 12 )
text = "NO"

[node name="Apilado_Auto" type="Label" parent="Opciones"]
visible = false
margin_left = 458.0
margin_top = 897.0
margin_right = 1256.0
margin_bottom = 988.0
custom_fonts/font = SubResource( 9 )
text = "APILADO AUTOMATICO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="si_Apilar" type="TextureButton" parent="Opciones/Apilado_Auto"]
margin_left = 900.0
margin_top = -40.0
margin_right = 1038.0
margin_bottom = 98.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="no_Apilar" type="TextureButton" parent="Opciones/Apilado_Auto"]
margin_left = 1210.0
margin_top = -41.0
margin_right = 1348.0
margin_bottom = 97.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="si2" type="Label" parent="Opciones/Apilado_Auto"]
margin_left = 941.0
margin_top = -3.0
margin_right = 1001.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 12 )
text = "SI"

[node name="no2" type="Label" parent="Opciones/Apilado_Auto"]
margin_left = 1235.0
margin_top = -8.0
margin_right = 1330.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 12 )
text = "NO"

[node name="Salir" type="TextureButton" parent="Opciones"]
visible = false
margin_left = 150.0
margin_top = 51.0
margin_right = 288.0
margin_bottom = 189.0
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opciones" type="AnimationPlayer" parent="Opciones"]
anims/Anim_Opciones = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Salir2" type="AudioStreamPlayer" parent="Opciones"]
stream = ExtResource( 15 )
volume_db = 10.0

[node name="Seleccion" type="AudioStreamPlayer" parent="Opciones"]
stream = ExtResource( 16 )
volume_db = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -16.0
autoplay = true

[connection signal="pressed" from="Botones/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Botones/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Botones/Options" to="." method="_on_Options_pressed"]
[connection signal="animation_finished" from="Cortina_escena/Intro" to="." method="_on_Intro_animation_finished"]
[connection signal="animation_finished" from="Cortina_escena/Salida" to="." method="_on_Salida_animation_finished"]
[connection signal="pressed" from="Opciones/Vibracion/si_vibrar" to="." method="_on_si_vibrar_pressed"]
[connection signal="pressed" from="Opciones/Vibracion/no_vibrar" to="." method="_on_no_vibrar_pressed"]
[connection signal="pressed" from="Opciones/Teselado_Auto/si_Teselar" to="." method="_on_si_Teselar_pressed"]
[connection signal="pressed" from="Opciones/Teselado_Auto/no_Teselar" to="." method="_on_no_Teselar_pressed"]
[connection signal="pressed" from="Opciones/Apilado_Auto/si_Apilar" to="." method="_on_si_Apilar_pressed"]
[connection signal="pressed" from="Opciones/Apilado_Auto/no_Apilar" to="." method="_on_no_Apilar_pressed"]
[connection signal="pressed" from="Opciones/Salir" to="." method="_on_Salir_pressed"]
